<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <com.quran.labs.androidquran.ui.preference.QuranHeaderPreference
      android:summary="@string/about_description"
      android:title="@string/app_name"/>

  <PreferenceCategory
      android:key="aboutDataSources"
      android:title="@string/about_data_sources"
      app:iconSpaceReserved="false">

    <Preference
        android:key="madaniImages"
        android:summary="@string/about_madani_images"
        android:title="@string/about_images"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_madani_images_url"/>
    </Preference>

    <Preference
        android:key="naskhImages"
        android:summary="@string/about_naskh_images"
        android:title="@string/about_images"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_naskh_images_url"/>
    </Preference>

    <Preference
        android:key="qaloonImages"
        android:summary="@string/about_qaloon_images"
        android:title="@string/about_images"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true"
        />

    <Preference
        android:summary="@string/about_quranicaudio_summary"
        android:title="@string/about_quranicaudio"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_quranicaudio_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_quran_ksu_summary"
        android:title="@string/about_quran_ksu"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_quran_ksu_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_furqan_summary"
        android:title="@string/about_furqan"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_furqan_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_quran_enc_summary"
        android:title="@string/about_quran_enc"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_quran_enc_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_tanzil_summary"
        android:title="@string/about_tanzil"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_tanzil_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_noorhidayat_summary"
        android:title="@string/about_noorhidayat"
        app:iconSpaceReserved="false"
        app:singleLineTitle="true">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_noorhidayat_url"/>
    </Preference>
  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/about_open_source"
      app:iconSpaceReserved="false">

    <Preference
        android:summary="@string/about_androidx_url"
        android:title="@string/about_androidx"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_androidx_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_kotlin_url"
        android:title="@string/about_kotlin"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_kotlin_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_dagger2_url"
        android:title="@string/about_dagger2"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_dagger2_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_okhttp_url"
        android:title="@string/about_okhttp"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_okhttp_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_rxjava_url"
        android:title="@string/about_rxjava"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_rxjava_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_rxandroid_url"
        android:title="@string/about_rxandroid"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_rxandroid_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_moshi_url"
        android:title="@string/about_moshi"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_moshi_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_sliding_panel_url"
        android:title="@string/about_sliding_panel"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_sliding_panel_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_timber_url"
        android:title="@string/about_timber"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_timber_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_material_components_url"
        android:title="@string/about_material_components"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_material_components_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_dnsjava_url"
        android:title="@string/about_dnsjava"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_dnsjava_url"/>
    </Preference>

    <Preference
        android:summary="@string/about_numberPicker_url"
        android:title="@string/about_numberPicker"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_numberPicker_url"/>
    </Preference>

  </PreferenceCategory>

  <PreferenceCategory
      android:title="@string/about_others"
      app:iconSpaceReserved="false">
    <Preference
        android:summary="@string/about_contributors_summary"
        android:title="@string/about_contributors"
        app:iconSpaceReserved="false">
      <intent
          android:action="android.intent.action.VIEW"
          android:data="@string/about_contributors_url"/>
    </Preference>
  </PreferenceCategory>
</PreferenceScreen>
