<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/sort"
          android:icon="@drawable/ic_sort"
          android:title="@string/menu_sort"
          android:visible="false"
          android:enabled="false"
          app:showAsAction="ifRoom" >
          <menu>
              <item android:id="@+id/sort_date"
                    android:title="@string/menu_sort_date"
                    app:showAsAction="withText" />
              <item android:id="@+id/sort_location"
                    android:title="@string/menu_sort_location"
                    android:visible="false"
                    android:enabled="false"
                    app:showAsAction="withText" />
              <item android:id="@+id/sort_alphabetical"
                    android:title="@string/menu_sort_alphabetical"
                    android:visible="false"
                    android:enabled="false"
                    app:showAsAction="withText" />
          </menu>
    </item>
    <item android:id="@+id/last_page"
          android:icon="@drawable/ic_goto_quran"
          android:title="@string/menu_jump_last_page"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/search"
          android:icon="@drawable/ic_ab_search"
          android:title="@string/menu_search"
          app:showAsAction="ifRoom" />
    <item android:id="@+id/jump"
          android:title="@string/menu_jump"
          app:showAsAction="never" />
    <item android:id="@+id/settings"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/menu_settings"
          app:showAsAction="never" />
    <item android:id="@+id/help"
          android:title="@string/menu_help"
          app:showAsAction="never"/>
    <item android:id="@+id/about" 
          android:title="@string/menu_about"
          app:showAsAction="never"/>
</menu>
