<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/cab_tag_bookmark"
          android:icon="@drawable/ic_tag"
          android:title="@string/tag_bookmark"
          android:showAsAction="always" />
    <item android:id="@+id/cab_edit_tag"
          android:icon="@drawable/ic_edit"
          android:title="@string/edit_tag"
          android:showAsAction="always" />
    <item android:id="@+id/cab_delete_tag"
          android:icon="@drawable/ic_cancel"
          android:title="@string/delete_tag"
          android:showAsAction="always" />
    <item android:id="@+id/cab_new_tag"
          android:icon="@drawable/ic_new"
          android:title="@string/new_tag"
          android:showAsAction="always" />
</menu>
