<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="false"
    >
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingLeft="12dp"
      android:paddingRight="12dp"
      >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/play_from"
        android:textAppearance="@style/PanelLabel"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        >
      <com.quran.labs.androidquran.view.QuranSpinner
          android:id="@+id/start_sura_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
      <com.quran.labs.androidquran.view.QuranSpinner
          android:id="@+id/start_ayah_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/play_to"
        android:textAppearance="@style/PanelLabel"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        >
      <com.quran.labs.androidquran.view.QuranSpinner
          android:id="@+id/end_sura_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
      <com.quran.labs.androidquran.view.QuranSpinner
          android:id="@+id/end_ayah_spinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:text="@string/play_verses_range"
          android:textAppearance="@style/PanelLabel"
          />
      <com.shawnlin.numberpicker.NumberPicker
          android:id="@+id/repeat_range_picker"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:layout_centerInParent="true"
          app:np_orientation="horizontal"
          app:np_width="135dp"
          app:np_height="48dp"
          app:np_max="99"
          app:np_value="7"
          app:np_min="1"
          app:np_textSize="27sp"
          app:np_selectedTextSize="33sp"
          app:np_selectedTextColor="@color/panel_label"
          app:np_dividerColor="@color/panel_label"
          app:np_dividerType="underline"
          app:np_fadingEdgeEnabled="true"
          app:np_wrapSelectorWheel="true"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:text="@string/play_each_verse"
          android:textAppearance="@style/PanelLabel"
          />
      <com.shawnlin.numberpicker.NumberPicker
          android:id="@+id/repeat_verse_picker"
          android:layout_width="wrap_content"
          android:layout_height="40dp"
          android:layout_centerInParent="true"
          app:np_orientation="horizontal"
          app:np_width="135dp"
          app:np_height="48dp"
          app:np_max="99"
          app:np_value="3"
          app:np_min="1"
          app:np_textSize="27sp"
          app:np_selectedTextSize="33sp"
          app:np_selectedTextColor="@color/panel_label"
          app:np_dividerColor="@color/panel_label"
          app:np_dividerType="underline"
          app:np_fadingEdgeEnabled="true"
          app:np_wrapSelectorWheel="true"
      />
    </LinearLayout>

    <CheckBox
        android:id="@+id/restrict_to_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/play_restrict_range"
        />

    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_apply"
        android:layout_gravity="end"
        />
  </LinearLayout>
</ScrollView>
